# thesis

./: .gitignore  LICENSE  README.md
python_files/: README.md  requirements.txt
python_files/annotator/: annotator.py  annotator.yaml  annotator_utils.py  main.py  pyinstaller_cmd  pyinstaller_cmd_win.ps1  requirements.txt
python_files/annotator/ui/: annotator_ui.py  annotator_ui.ui  image_window.py
python_files/data_process/: data.py  features.py  file_wrapper.py  labels.py  segment.py  signal_tools.py  syncer.py  utils.py
python_files/data_process/detect/rule_based/: envelope_threshold.py
python_files/data_process/file_scripts/: common.py  data_18_07_2023__17_14_22.pkl  detect_jumps.py  export_dataset_pkl.py  export_pkl.py  inject_calib.py  join_annotations.py  print_types.py
python_files/notebooks/: dyn_calib_with_accel.ipynb  dyn_calib_with_accel_detect.ipynb  fft.ipynb  gravity_finder.ipynb  hilbert.ipynb  imu_filter.ipynb  interp.ipynb  syncer.ipynb
python_files/notebooks/anomaly_detection/: template.ipynb
python_files/notebooks/anomaly_detection/per_point_analysis/: analyze_results.py
python_files/notebooks/anomaly_detection/per_point_analysis/rule_based/: hilbert_threshold.ipynb  hilbert_threshold_evaluate.ipynb  hilbert_threshold_hyperparameter_search.py
python_files/notebooks/anomaly_detection/per_point_analysis/rule_based/frozen/: cusum.ipynb  dyn_thres_detection.ipynb  moving_filter_detection.ipynb
python_files/store_db/: doc_aggregator.py  doc_builder.py  html_viewer.py  mongo_wrapper.py
python_files/store_db/mongo_docker/: docker-compose.yml
python_files/store_db/notebooks/: sensitivity_check.ipynb
python_files/store_db/script/: options.yaml  parse_yaml.py  script.py
python_files/store_db/script/examples/: add_larisa.bash  add_larisa_detect.bash  add_salouga.bash  add_salouga2.bash  add_salouga3.bash  larisa.yaml  salouga.yaml  salouga2.yaml  salouga3_a.yaml  salouga3_b.yaml
ros_packages/: README.md
ros_packages/genesis/: Makefile  genesis.bash  genesis.service
ros_packages/road_quality_calib/: package.xml  setup.cfg  setup.py
ros_packages/road_quality_calib/road_quality_calib/: calib_utils.py  calibration.py  imu_dyn_calib.py  imu_static_calib.py
ros_packages/road_quality_calib/theory/: vehicle_imu_calib.tex
ros_packages/road_quality_core/: CMakeLists.txt  package.xml
ros_packages/road_quality_core/include/: nucleus.hpp  nucleus_types.hpp
ros_packages/road_quality_core/launch/: nucleus_launch.py
ros_packages/road_quality_core/src/: main.cpp  nucleus.cpp
ros_packages/road_quality_gpio/: CMakeLists.txt  package.xml
ros_packages/road_quality_gpio/config/: gpio.yaml
ros_packages/road_quality_gpio/include/: moving_average.hpp  pi_gpio.hpp  pi_gpio_types.hpp
ros_packages/road_quality_gpio/src/: main.cpp  pi_gpio.cpp
ros_packages/road_quality_icm20948_cpp/: CMakeLists.txt  package.xml
ros_packages/road_quality_icm20948_cpp/config/: imu.yaml
ros_packages/road_quality_icm20948_cpp/icm20948_i2c/: icm20948_i2c.cpp  icm20948_i2c.hpp  icm20948_utils.cpp  icm20948_utils.hpp
ros_packages/road_quality_icm20948_cpp/icm20948_i2c/example/: test.cpp
ros_packages/road_quality_icm20948_cpp/include/: icm20948_reader.hpp
ros_packages/road_quality_icm20948_cpp/src/: icm20948_reader.cpp  main.cpp
ros_packages/road_quality_monitor/: package.xml  setup.cfg  setup.py
ros_packages/road_quality_monitor/config/: monitor.yaml
ros_packages/road_quality_monitor/road_quality_monitor/: main.py  monitor.py
ros_packages/road_quality_monitor/road_quality_monitor/parsers/: gps_parsers.py  imu_parsers.py
ros_packages/road_quality_monitor/road_quality_monitor/utils/: buffers.py  plot_utils.py
ros_packages/road_quality_monitor/ui/: analog_gauge_widget.py  compasswidget.py  interface.py  interface.ui
ros_packages/road_quality_msgs/: CMakeLists.txt  package.xml
ros_packages/road_quality_msgs/msg/: Gpgga.msg  Gpgll.msg  Gpgsa.msg  Gpgsv.msg  Gprmc.msg  GpsTime.msg  Gpvtg.msg  Imu.msg  Pcd11.msg  PinPwmState.msg  PinState.msg
ros_packages/road_quality_msgs/srv/: GetImuCalib.srv
ros_packages/road_quality_mtk3339_cpp/: CMakeLists.txt  package.xml
ros_packages/road_quality_mtk3339_cpp/config/: gps.yaml
ros_packages/road_quality_mtk3339_cpp/include/: mtk3339_reader.hpp
ros_packages/road_quality_mtk3339_cpp/mtk3339_uart/: mtk_serial.cpp  mtk_serial.hpp  mtk_utils.cpp  mtk_utils.hpp
ros_packages/road_quality_mtk3339_cpp/mtk3339_uart/example/: Makefile  test.cpp  test.yaml  test_yaml.cpp
ros_packages/road_quality_mtk3339_cpp/src/: main.cpp  mtk3339_reader.cpp
ros_packages/sync_rpi4/: common.py  get_bags.py  git_pull.py  sync_packages.py
